wrap section-title with a button (fix a11y warning)

--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -71,6 +71,15 @@ button {
   cursor: pointer;
 }
 
+.hollow-button {
+  width: 100%;
+  padding: 0;
+}
+
+.hollow-button > * {
+  width: 100%;
+}
+
 p {
   font-size: 0.9rem;
 }
